<resources>
    <string name="app_name">HussainShop</string>
    <string name="lblPrice">Price</string>
    <string name="price">12.99</string>
    <string name="lblQuantity">Quantity</string>
    <string name="amountofItems">0</string>
    <string name="removeQty">-</string>
    <string name="addQty">+</string>
    <string name="thank_you_for_using_my_app">Thank You For Using My App!</string>
    <string name="total_items">Total items</string>
    <string name="subtotal">SubTotal</string>
    <string name="gst">GST</string>
    <string name="_0_00">0.00</string>
    <string name="tvq">TVQ</string>
    <string name="total">Total</string>
    <string name="pricec2">13.99</string>
    <string name="pricec3">14.99</string>
</resources>
