<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="423dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView">

        <ImageView
            android:id="@+id/imageViewChicken"
            android:layout_width="289dp"
            android:layout_height="165dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_chickennugget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="24dp"
            android:text="@string/lblPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewChicken" />

        <TextView
            android:id="@+id/txtPriceC3"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pricec3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintStart_toEndOf="@+id/textViewPrice"
            app:layout_constraintTop_toBottomOf="@+id/imageViewChicken" />

        <TextView
            android:id="@+id/textViewQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="8dp"
            android:text="@string/lblQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

        <TextView
            android:id="@+id/textViewQuantityc3"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="156dp"
            android:text="@string/amountofItems"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toEndOf="@+id/textViewQty"
            app:layout_constraintTop_toBottomOf="@+id/txtPriceC3" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="52dp"
            android:onClick="subtractQuantityC3"
            android:text="@string/removeQty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQty" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:onClick="addQuantityC3"
            android:text="@string/addQty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/btnSubtract"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuantityc3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/subtotal"
            app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQty"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/textViewPriceTotalC3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0_00"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuantityc3"
            app:layout_constraintVertical_bias="0.538" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>

</android.support.v7.widget.CardView>