<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView">

            <ImageView
                android:id="@+id/imageViewChicken"
                android:layout_width="289dp"
                android:layout_height="165dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_friedchicken"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="124dp"
                android:layout_marginTop="24dp"
                android:text="@string/lblPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewChicken" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toEndOf="@+id/textViewPrice"
                app:layout_constraintTop_toBottomOf="@+id/imageViewChicken" />

            <TextView
                android:id="@+id/textViewQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="116dp"
                android:layout_marginTop="12dp"
                android:text="@string/lblQuantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="50dp"
                android:layout_height="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="176dp"
                android:text="@string/amountofItems"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="48dp"
                android:onClick="subtractQuantity"
                android:text="@string/removeQty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewQty" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="8dp"
                android:onClick="addQuantity"
                android:text="@string/addQty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toEndOf="@+id/btnSubtract"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="116dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/subtotal"
                app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewQty"
                app:layout_constraintVertical_bias="0.461" />

            <TextView
                android:id="@+id/textTotalPrice"
                android:layout_width="44dp"
                android:layout_height="21dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuantity"
                app:layout_constraintVertical_bias="0.472"
                tools:text="@string/_0_00" />


        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>